<resources>
    <string name="app_name">My CyberAnimal</string>
    <string name="nazva">My CyberAnimal App</string>
    <string name="buttons">Деталі</string>
    <string name="button_back">Назад</string>
    <string name="cow">Корова</string>
    <string name="mouse">Миша</string>
    <string name="tiger">Тигр</string>

    <string name="cow_opis">Кібер корова: велика, потужна, продуктивна, програмована, потенційно небезпечна.</string>
    <string name="mouse_opis">Кібер миша: дрібна, швидка, прониклива, гнучка, винахідлива, розумна.</string>
    <string name="tiger_opis">Кіберпанк тигр: м\'язистий, сильний, збройований, агресивний, небезпечний.</string>

    <string name="cow_detali">Кібер корова - це фантастична тварина, яка поєднує в собі елементи корови та кіберпанку. Вона має велике тіло з вбудованими кібернетичними модифікаціями. Кібер корова може бути використана для вирощування харчових продуктів, таких як м\'ясо та молоко. Вона має у собі вбудовані системи живлення, які дозволяють їй перетравлювати будь-які рослинні матеріали, що забезпечує їй безперервне функціонування. Крім того, кібер корова має вбудовані сенсорні системи, що дозволяють їй відчувати навколишнє середовище, а також системи моніторингу, які контролюють її стан здоров\'я. Вона також може мати вбудовані системи самодіагностики, які можуть з\'ясувати будь-які проблеми з її функціонуванням. Кібер корови можуть бути програмовані для виконання різних завдань, таких як збір та обробка даних про землю, збирання зразків ґрунту або виробництво харчових продуктів. Їх також можна використовувати як механізми для виконання важких робіт в сільському господарстві. У світі кіберпанку, кібер корови можуть бути цінними активами для виробництва харчових продуктів та могли б допомогти в боротьбі з проблемами голоду в глобальному масштабі.</string>
    <string name="mouse_detali">Кібер миша - це фантастична тварина, яка поєднує в собі елементи миші та кіберпанку. Вона має дрібне тіло, подібне до звичайної миші, але з різними кібернетичними модифікаціями. Кібер миша має підвищену швидкість та реакцію завдяки вбудованим в неї моторам та датчикам руху. Вона може легко відчувати навколишнє середовище та реагувати на нього, забезпечуючи швидкість та маневреність. Крім того, кібер миша має кібернетичні імпланти, які дозволяють їй отримувати доступ до комп\'ютерних мереж та пристроїв. Вона може підключатися до різних електронних пристроїв та керувати ними, виконувати завдання, які їй наказують, або збирати інформацію. Кібер миша може бути корисною як шпигун, який може проникати в складні технічні системи, щоб зібрати важливу інформацію, або як електронний злодій, який може керувати пристроями та зламувати захист комп\'ютерних мереж. У світі кіберпанку кібер миша може бути дуже корисним та важливим інструментом, але в той же час вона може стати потенційно небезпечною, якщо попаде в руки хакерів або інших зловмисників.</string>
    <string name="tiger_detali">Кіберпанк тигр - це фантастична тварина, яка поєднує в собі елементи тигра і кіберпанку. Він має вигляд звичайного тигра, але його тіло модифіковане за допомогою різних технологій та кібернетичних імплантів. Кіберпанк тигр має штучні лапи, які дозволяють йому рухатися швидше і більш точно, а його зуби та кігті покриті міцними матеріалами, що дозволяє йому легко розривати будь-який матеріал. Також, його органи та нервова система підключені до комп\'ютерних мереж, що дозволяє йому контролювати електронні системи та з\'єднуватися з іншими машинами. Це сильна і небезпечна тварина, яка може виконувати різноманітні завдання, які стали надзвичайно важливими у світі кіберпанку. Він може бути використаний як охоронець, бойовий робот, або як знахар здатний готувати ліки та засоби для лікування вірусів та інших хвороб. У світі кіберпанку тигр може стати ідеальним союзником або жахливим ворогом, залежно від того, хто контролює його дії та його кібернетичні імпланти.</string>



</resources>