<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@color/supergrey"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nazva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/nazva"
        android:textColor="@color/superorange"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/superblue"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="4dp"
                android:backgroundTint="@color/superorange"
                android:text="@string/buttons"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_cow"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="0dp"
                android:src="@drawable/cow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_cow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/white"
                android:text="@string/cow"
                android:textSize="25sp"
                app:layout_constraintEnd_toStartOf="@id/button1"
                app:layout_constraintStart_toEndOf="@id/image_cow"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cow_opis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/cow_opis"
                android:textSize="11sp"
                app:layout_constraintEnd_toStartOf="@id/button1"
                app:layout_constraintStart_toEndOf="@id/image_cow"
                app:layout_constraintTop_toBottomOf="@id/name_cow" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/superblue"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="4dp"
                android:backgroundTint="@color/superorange"
                android:text="@string/buttons"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_mouse"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="0dp"
                android:src="@drawable/mouse"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_mouse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/white"
                android:text="@string/mouse"
                android:textSize="25sp"
                app:layout_constraintEnd_toStartOf="@id/button2"
                app:layout_constraintStart_toEndOf="@id/image_mouse"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mouse_opis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/mouse_opis"
                android:textSize="11sp"
                android:layout_marginStart="2dp"
                app:layout_constraintEnd_toStartOf="@id/button2"
                app:layout_constraintStart_toEndOf="@id/image_mouse"
                app:layout_constraintTop_toBottomOf="@id/name_mouse" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/superblue"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="4dp"
                android:backgroundTint="@color/superorange"
                android:text="@string/buttons"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_tiger"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="0dp"
                android:src="@drawable/tiger"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_tiger"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/white"
                android:text="@string/tiger"
                android:textSize="25sp"
                app:layout_constraintEnd_toStartOf="@id/button3"
                app:layout_constraintStart_toEndOf="@id/image_tiger"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tiger_opis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"

                android:text="@string/tiger_opis"
                android:textSize="11sp"
                android:layout_marginStart="2dp"
                app:layout_constraintEnd_toStartOf="@id/button3"
                app:layout_constraintStart_toEndOf="@id/image_tiger"
                app:layout_constraintTop_toBottomOf="@id/name_tiger" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>